src/app/tabs/tabs.page.scss
ion-toolbar {
  border-top: 0.55px solid
    var(
      --ion-tab-bar-border-color,
      var(--ion-border-color, var(--ion-color-step-150, rgba(0, 0, 0, 0.2)))
    );
}

.songLabel {
  padding: 1rem;
  position: absolute;
}

.songRange {
  top: 1.8rem;
}

.close {
  position: absolute;
  right: 0;
}

